# processor-model

./: .gitignore  CMakeLists.txt  README.md
asm/: CMakeLists.txt
asm/include/: assembler.hpp  parser.hpp
asm/source/: assemble.cpp  cleaner_base.cpp  cleaner_thread.cpp
config/: bincode.txt  tokentype.txt
cpu/: CMakeLists.txt
cpu/include/: memory.hpp  processor.hpp  registers.hpp  thread.hpp
cpu/source/: memory.cpp  processor.cpp  registers.cpp  thread.cpp
dialogue/: CMakeLists.txt  dialogue.cpp
instructions/: CMakeLists.txt
instructions/include/: commands.hpp  instructions.hpp  operands.hpp
instructions/source/: commands.cpp  instructions.cpp  operands.cpp
myvector/: CMakeLists.txt  myvector.hpp
tests/: CMakeLists.txt  asm_testing.cpp  commands_testing.cpp  cpu_testing.cpp  memory_testing.cpp  myvector_testing.cpp  operands_testing.cpp  registers_testing.cpp  utils_testing.cpp
tests/testdata/: valid_file.txt
utils/: CMakeLists.txt
utils/include/: binarycode.hpp  configconst.hpp
utils/source/: binarycode.cpp
